--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@1,300&display=swap" rel="stylesheet">
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-<link href="css/reset.css" rel="stylesheet">
-<link href="css/nav.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
+<link href="href="https://kamooooo37.github.io/cafe_ricken2/reset.css" rel="stylesheet">
+<link href="https://kamooooo37.github.io/cafe_ricken2/css/nav.css" rel="stylesheet">
+<link href="https://kamooooo37.github.io/cafe_ricken2/css/style.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
@@ -21,7 +21,7 @@
 		
 		<section id="page1">
 			<div class="top">
-				<h1><a href="#page1"><img src="images/logo.png" alt="ロゴ画像"></a></h1>
+				<h1><a href="#page1"><img src="https://kamooooo37.github.io/cafe_ricken2/images/logo.png" alt="ロゴ画像"></a></h1>
 				
 				<input id="open" type="checkbox">
 				<label class="toggle" for="open">
@@ -46,11 +46,11 @@
 			</div><!--top-->
 					
 				<div class="main_pic">
-					<img class="fluid shop1" src="images/shop1.jpg" alt="店内写真">
-					<img class="fluid shop2" src="images/shop2.jpg" alt="店内写真">
-					<img class="fluid shop3" src="images/shop3.jpg" alt="店内写真">
-					<img class="fluid shop4" src="images/shop4.jpg" alt="店内写真">
-					<img class="fluid shop5" src="images/shop5.jpg" alt="店内写真">
+					<img class="fluid shop1" src="https://kamooooo37.github.io/cafe_ricken2/images/shop1.jpg" alt="店内写真">
+					<img class="fluid shop2" src="https://kamooooo37.github.io/cafe_ricken2/images/shop2.jpg" alt="店内写真">
+					<img class="fluid shop3" src="https://kamooooo37.github.io/cafe_ricken2/images/shop3.jpg" alt="店内写真">
+					<img class="fluid shop4" src="https://kamooooo37.github.io/cafe_ricken2/images/shop4.jpg" alt="店内写真">
+					<img class="fluid shop5" src="https://kamooooo37.github.io/cafe_ricken2/images/shop5.jpg" alt="店内写真">
 			</div><!--main_pic-->
 		</section>
 		
@@ -77,29 +77,29 @@
 				</div><!--icon-->
 			</div><!--info-->
 			<div class="line">
-				<img class="fluid" src="images/line.png" alt="#">
+				<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/line.png" alt="#">
 			</div><!--line-->
 		</section>
 		
 		<section id="page3">
 			<div class="cake_pic">
 					<div class="cake">
-						<img class="fluid" src="images/cake1.jpg" alt="ホールケーキ">
+						<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/cake1.jpg" alt="ホールケーキ">
 					</div>
 					<div class="cake">
-						<img class="fluid" src="images/cake2.jpg" alt="モンブラン">
+						<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/cake2.jpg" alt="モンブラン">
 					</div>
 					<div class="cake">
-						<img class="fluid" src="images/cake3.jpg" alt="ガトーショコラ">
+						<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/cake3.jpg" alt="ガトーショコラ">
 					</div>
 					<div class="cake">
-						<img class="fluid" src="images/cake4.jpg" alt="シュークリーム">
+						<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/cake4.jpg" alt="シュークリーム">
 					</div>
 					<div class="cake">
-						<img class="fluid" src="images/cake5.jpg" alt="チョコケーキ">
+						<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/cake5.jpg" alt="チョコケーキ">
 					</div>
 					<div class="cake">
-						<img class="fluid" src="images/cake6.jpg" alt="チーズケーキ">
+						<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/cake6.jpg" alt="チーズケーキ">
 					</div>
 			</div><!--cake_pic-->
 			<div class="price">
@@ -118,22 +118,22 @@
 		<section id="page4">
 			<div class="drink_pic">
 				<div class="drink">
-					<img class="fluid" src="images/drink1.jpg" alt="アイスカフェラテ">
+					<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/drink1.jpg" alt="アイスカフェラテ">
 				</div>
 				<div class="drink">
-					<img class="fluid" src="images/drink2.jpg" alt="ホットカフェラテ">
+					<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/drink2.jpg" alt="ホットカフェラテ">
 				</div>
 				<div class="drink">
-					<img class="fluid" src="images/drink3.jpg" alt="オレンジジュース">
+					<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/drink3.jpg" alt="オレンジジュース">
 				</div>
 				<div class="drink">
-					<img class="fluid" src="images/drink4.jpg" alt="マシュマロココア">
+					<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/drink4.jpg" alt="マシュマロココア">
 				</div>
 				<div class="drink">
-					<img class="fluid" src="images/drink5.jpg" alt="アイスコーヒー">
+					<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/drink5.jpg" alt="アイスコーヒー">
 				</div>
 				<div class="drink">
-					<img class="fluid" src="images/drink6.jpg" alt="レモンティー">
+					<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/drink6.jpg" alt="レモンティー">
 				</div>
 			</div><!--drink_pic-->
 			<div class="price">
@@ -151,7 +151,7 @@
 		
 		<section id="page5">
 			<div class="line">
-				<img class="fluid" src="images/line.png" alt="#">
+				<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/line.png" alt="#">
 			</div><!--line-->
 			<h2 class="g-fonts">access</h2>
 			<div class="access">
