--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@1,300&display=swap" rel="stylesheet">
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-<link href="href="https://kamooooo37.github.io/cafe_ricken2/reset.css" rel="stylesheet">
+<link href="https://kamooooo37.github.io/cafe_ricken2/reset.css" rel="stylesheet">
 <link href="https://kamooooo37.github.io/cafe_ricken2/css/nav.css" rel="stylesheet">
 <link href="https://kamooooo37.github.io/cafe_ricken2/css/style.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
