--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@1,300&display=swap" rel="stylesheet">
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 <link href="https://kamooooo37.github.io/cafe_ricken2/reset.css" rel="stylesheet">
-<link href="https://kamooooo37.github.io/cafe_ricken/nav.css" rel="stylesheet">
-<link href="https://kamooooo37.github.io/cafe_ricken/style.css" rel="stylesheet">
+<link href="https://kamooooo37.github.io/cafe_ricken2/nav.css" rel="stylesheet">
+<link href="https://kamooooo37.github.io/cafe_ricken2/style.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
