--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				</div><!--icon-->
 			</div><!--info-->
 			<div class="line">
-				<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/line.png" alt="#">
+				<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/line.png" alt="#">
 			</div><!--line-->
 		</section>
 		
@@ -151,7 +151,7 @@
 		
 		<section id="page5">
 			<div class="line">
-				<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/images/line.png" alt="#">
+				<img class="fluid" src="https://kamooooo37.github.io/cafe_ricken2/line.png" alt="#">
 			</div><!--line-->
 			<h2 class="g-fonts">access</h2>
 			<div class="access">
