--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="discription" content="架空カフェサイトCafe Ricken">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta name="robots" content="noindex,nofollow">
 <title>Cafe Ricken</title>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@1,300&display=swap" rel="stylesheet">
